--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,18 @@
-@import-normalize; /* bring in normalize.css styles */
+@import url('https://fonts.googleapis.com/css2?family=Noto+Serif:wght@400;700&family=Roboto:wght@400;500&display=swap');
+
+:root {
+  --main-color: #ffffff;
+  --secondary-color: #f5f6fb;
+  --accent-color: #ff751d;
+  --accent-pale-color: #ffdac0;
+
+  --main-text: #000000;
+  --secondary-text: #52555f;
+  --accent-pale-text: rgba(82, 85, 95, 0.7);
+  --inputs-text: #c7ccdc;
+  --expenses-text: #e7192e;
+  --income-text: #407946;
+}
 
 body {
   margin: 0;
@@ -7,9 +21,40 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  font-family: 'Roboto', sans-serif;
+}
+.hidden {
+  overflow: hidden;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+h1,
+p {
+  margin: 0;
+}
+
+.error {
+  position: absolute;
+  color: red;
+  font-size: 12px;
+}
+
+ul,
+li {
+  margin: 0;
+  padding: 0;
+}
+
+a {
+  transition: 0.3s;
+}
+
+a:hover {
+  color: #6e6d6e;
+}
+
